# recipe-stats-calculator-rs

./: .gitignore  Cargo.toml  README.md
data/: recipes_small.json
src/: main.rs  recipe.rs
src/recipe/: ExpectedOutput.rs  calculator.rs
