[package]
name = "recipe-stats-calculator-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
chrono = "0.4.19"
regex = "1.5.4"
lazy_static = "1.4.0"
